--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,17 +1,31 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
+<ion-header>
+  <ion-toolbar color="primary">
     <ion-title>
-      Tab 2
+      Post New Message
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 2</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content class="masters">
 
-  <app-explore-container name="Tab 2 page"></app-explore-container>
+  <ion-card>
+
+    <ion-card-content>
+      <ion-item>
+        <ion-label position="stacked">Your Message</ion-label>
+        <ion-input [(ngModel)]="post.text"></ion-input>
+      </ion-item>
+     
+      <ion-item>
+        <ion-label position="stacked">To:</ion-label>
+        <ion-select [(ngModel)]="post.to">
+          <ion-select-option value="Everyone">Everyone</ion-select-option>
+        </ion-select>
+      </ion-item>
+     <ion-button (click)="sendMessage()" expand="block" color="primary">Submit Post</ion-button>
+     
+    </ion-card-content>
+    
+  </ion-card>
+ 
 </ion-content>
